--- a/index.html
+++ b/index.html
@@ -20,12 +20,55 @@
           <a class="capstone" href=""
             >캡스톤디자인<i class="bi bi-box-arrow-up-right"></i
           ></a>
-          <button class="btn-full-header">
-            <span><i></i><i></i><i></i></span><span><i></i><i></i><i></i></span
-            ><span><i></i><i></i><i></i></span>
-          </button>
+          <div class="full-header-buttons">
+            <button class="btn-full-header-show">
+              <span><i></i><i></i><i></i></span
+              ><span><i></i><i></i><i></i></span
+              ><span><i></i><i></i><i></i></span>
+            </button>
+            <button class="btn-full-header-hide"><i></i></button>
+          </div>
         </div>
       </header>
+      <div class="full-header">
+        <div class="full-header-fake-bg"></div>
+        <div class="full-header-content">
+          <ul class="full-header-gnb">
+            <li>
+              <a href=""><i>홈</i></a>
+            </li>
+            <li>
+              <a href=""><i>소개</i></a>
+            </li>
+            <li>
+              <a href=""><i>Q&A</i></a>
+            </li>
+            <li>
+              <a href=""><i>학생</i></a>
+            </li>
+            <li>
+              <a href=""><i>교원</i></a>
+            </li>
+            <li>
+              <a href=""><i>산업체</i></a>
+            </li>
+          </ul>
+          <address>
+            <div class="address-content">
+              <div class="address">
+                <b>Address</b>
+                04620 서울특별시 중구 필동로 1길 30 동국대학교<br />
+                신공학관 9층 9134호 LINC3.0사업단
+              </div>
+              <div class="tel-fax">
+                <span><b>Tel</b>02-2290-1723~30</span
+                ><span><b>Fax</b>02-2290-1731</span>
+              </div>
+            </div>
+          </address>
+          <div class="full-header-icon"><i class="rotate-v2"></i></div>
+        </div>
+      </div>
       <main>
         <section class="greeting">
           <div class="greeting-bg-text">
