--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -7,6 +7,8 @@
       content="width=device-width, initial-anim-scale=1.0"
     />
     <title>Document</title>
+
+    <script src="/dist/introduction.js"></script>
   </head>
   <body>
     <div class="container">
@@ -16,7 +18,7 @@
           <div class="center-intro-bg-icon">
             <i class="rotate"></i><i class="anim-scale"></i
             ><i class="anim-xLeft"></i><i class="anim-xRight"></i
-            ><i class="anim-xLeft"></i>
+            ><i class="anim-xLeft match-bg"></i>
           </div>
           <div class="center-intro-inner">
             <span class="heading"
@@ -166,6 +168,5 @@
       </main>
       <div class="footer-include"></div>
     </div>
-    <script src="/dist/introduction.js"></script>
   </body>
 </html>
