인덱스 페이지 반응형 1차

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section class="program-guide">
           <div class="program-guide-inner">
             <span class="program-guide-title"
-              ><i class="stroke">program </i><i>guide</i></span
+              ><i class="match-bg">program </i><i>guide</i></span
             >
             <div class="letter-items">
               <div class="letter-item">
@@ -140,7 +140,7 @@
                       <img
                         src="/src/images/pic_letter_inner01.png"
                         alt=""
-                        class="letter-envelope-inner-img"
+                        class="letter-envelope-in-img"
                       />
                       <img
                         class="letter-envelope-outer-img"
@@ -197,7 +197,7 @@
                       <img
                         src="/src/images/pic_letter_inner02.png"
                         alt=""
-                        class="letter-envelope-inner-img"
+                        class="letter-envelope-in-img"
                       />
                       <img
                         class="letter-envelope-outer-img"
@@ -252,7 +252,7 @@
                   <div class="letter">
                     <div class="letter-envelope">
                       <img
-                        class="letter-envelope-inner-img"
+                        class="letter-envelope-in-img"
                         src="/src/images/pic_letter_inner03.png"
                         alt=""
                       />
@@ -292,7 +292,7 @@
         </section>
         <section class="introduction">
           <div class="introduction-bg">
-            <div class="circle"><i class="stroke">about linc 3.0</i></div>
+            <div class="circle"><i class="match-bg">about linc 3.0</i></div>
             <div class="top-left"></div>
             <div class="bottom-left"></div>
           </div>
