인덱스 애니메이션 수정

--- a/index.html
+++ b/index.html
@@ -34,34 +34,11 @@
             </div>
           </div>
           <div class="greeting-inner">
-            <div class="greeting-emoji">
-              <i class="top-left-emoji">
-                <i class="img-wrap rotate-v2"></i>
-                <i class="img-wrap">
-                  <img
-                    class="rotate-v1"
-                    src="/src/images/section01_02.png"
-                    alt=""
-                  />
-                </i>
-              </i>
-              <i class="top-right-emoji">
-                <i class="img-wrap rotate-v3"></i>
-                <i class="img-wrap rotate-v2"></i>
-              </i>
-              <i class="bottom-left-emoji">
-                <i class="img-wrap rotate-v3"> </i>
-              </i>
-              <i class="bottom-right-emoji">
-                <i class="img-wrap">
-                  <img
-                    class="rotate-v1"
-                    src="/src/images/section01_06.png"
-                    alt=""
-                  />
-                </i>
-                <i class="img-wrap rotate-v2"></i>
-              </i>
+            <div class="greeting-emoji greeting-bg-icon">
+              <i class="rotate-v2"></i><i class="rotate-v1"></i
+              ><i class="rotate-v3"></i><i class="rotate-v2"></i
+              ><i class="rotate-v3"></i><i class="rotate-v1"></i
+              ><i class="rotate-v2"></i>
             </div>
             <div class="greeting-center">
               <img class="img-01" src="/src/images/deco_linc01.png" alt="" />
@@ -298,7 +275,7 @@
           </div>
           <div class="introduction-content">
             <div class="introduction-phrase">
-              '미래산업<i class="icon-clover"></i>발전에
+              '미래산업<i class="icon-clover" style="scale: 0.8;"></i>발전에
               <span>공헌하는 열린대학'</span>
             </div>
             <div class="introduction-phrase">
