인덱스페이지 반응형 완료

--- a/index.html
+++ b/index.html
@@ -268,14 +268,14 @@
           </div>
         </section>
         <section class="introduction">
-          <div class="introduction-bg">
-            <div class="circle"><i class="match-bg">about linc 3.0</i></div>
-            <div class="top-left"></div>
-            <div class="bottom-left"></div>
+          <div class="introduction-bg-icon">
+            <i class="circle"><i class="match-bg">about linc 3.0</i></i>
+            <i class="top-left"></i>
+            <i class="bottom-left"></i>
           </div>
           <div class="introduction-content">
             <div class="introduction-phrase">
-              '미래산업<i class="icon-clover" style="scale: 0.8;"></i>발전에
+              '미래산업<i class="icon-clover" style="scale: 0.8"></i>발전에
               <span>공헌하는 열린대학'</span>
             </div>
             <div class="introduction-phrase">
@@ -284,7 +284,7 @@
             <div class="introduction-phrase">
               동국대학교<span><i class="icon-link"></i>링크사업단</span>
             </div>
-            <a href="">소개 바로가기 <i class="bi bi-arrow-right"></i></a>
+            <a href="/pages/introduction.html">소개 바로가기 <i class="bi bi-arrow-right"></i></a>
           </div>
         </section>
       </main>
