--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -36,16 +36,22 @@
                   <img src="/src/images/pic_center01.png" alt="" />기술사업센터
                 </li>
                 <li>
-                  <img src="/src/images/pic_center02.png" alt="" />기술사업센터
+                  <img
+                    src="/src/images/pic_center02.png"
+                    alt=""
+                  />산학연협업센터
                 </li>
                 <li>
-                  <img src="/src/images/pic_center03.png" alt="" />기술사업센터
+                  <img src="/src/images/pic_center03.png" alt="" />산학교육센터
                 </li>
                 <li>
-                  <img src="/src/images/pic_center04.png" alt="" />기술사업센터
+                  <img src="/src/images/pic_center04.png" alt="" />창업교육센터
                 </li>
                 <li>
-                  <img src="/src/images/pic_center05.png" alt="" />기술사업센터
+                  <img
+                    src="/src/images/pic_center05.png"
+                    alt=""
+                  />현장실습지원센터
                 </li>
               </ul>
             </div>
@@ -67,13 +73,13 @@
             ><i class="anim-scale twinkle"></i>
           </div>
           <div class="course-inner">
-            <span class="heading"
-              ><i class="stroke">동국대학교 링크사업단<br /></i>산학교육센터<i
+            <div class="heading">
+              <i class="stroke">동국대학교 링크사업단<br /></i>산학교육센터<i
                 class="stroke"
                 >에서는</i
-              ></span
-            >
-            <p>산업현장 문제해결형 교육과정을 운영하고 있습니다.</p>
+              >
+              <p>산업현장 문제해결형 교육과정을 운영하고 있습니다.</p>
+            </div>
             <table>
               <thead>
                 <tr>
