반응형 완성

--- a/pages/industry.html
+++ b/pages/industry.html
@@ -14,9 +14,7 @@
         <section class="notice">
           <div><i class="bold">산업체</i> 님!</div>
           <div>학교와 산업체를<i class="icon-1"></i>연계한</div>
-          <div class="stroke bold">
-            교육 플랫폼<i class="icon-2" style="width: 100px"></i>구축을
-          </div>
+          <div class="stroke bold">교육 플랫폼<i class="icon-2"></i>구축을</div>
           <div class="bold">
             도와드리고<i class="icon-3"></i>있습니다. <span>연락주세요!</span>
           </div>
