--- a/pages/student.html
+++ b/pages/student.html
@@ -17,12 +17,10 @@
           <div>써먹기<i class="icon-1"></i>딱 좋은!</div>
           <div class="stroke bold">
             산학교육 프로그램은
-            <span
-              >산학교육<i class="icon-2" style="width: 100px"></i>센터와</span
-            >
+            <span>산학교육<i class="icon-2"></i>센터와</span>
           </div>
           <div class="bold">
-            각 참여학과<i class="icon-3"></i>에서 운영합니다!
+            각 참여학과<i class="icon-3"></i>에서 <span>운영합니다!</span>
           </div>
         </section>
         <section class="line">
@@ -78,6 +76,42 @@
             <div class="story-content">
               <div class="swiper">
                 <div class="swiper-wrapper">
+                  <div class="swiper-slide story-card">
+                    <div class="card-header">
+                      <span class="subject">특강</span>
+                      <span class="card-fake-btns">
+                        <i class="bi bi-dash"></i><i class="bi bi-stop"></i
+                        ><i class="bi bi-x"></i>
+                      </span>
+                    </div>
+                    <div class="img-box">
+                      <img src="/src/images/story_thumb_1.jpg" alt="" />
+                    </div>
+                    <div class="text-box">
+                      <b>이음클래스 KBS공채성우특강</b>
+                      <p>이음클래스 KBS공채성우특강</p>
+                      <span class="tag"
+                        ><i>이음클래스</i><i>KBS공채성우특강</i></span
+                      >
+                    </div>
+                  </div>
+                  <div class="swiper-slide story-card">
+                    <div class="card-header">
+                      <span class="subject">엑스포</span>
+                      <span class="card-fake-btns">
+                        <i class="bi bi-dash"></i><i class="bi bi-stop"></i
+                        ><i class="bi bi-x"></i>
+                      </span>
+                    </div>
+                    <div class="img-box">
+                      <img src="/src/images/story_thumb_2.jpg" alt="" />
+                    </div>
+                    <div class="text-box">
+                      <b>2023 산학협력 EXPO</b>
+                      <p>2023 산학협력 EXPO123</p>
+                      <span class="tag"><i>산학협력</i><i>EXPO</i></span>
+                    </div>
+                  </div>
                   <div class="swiper-slide story-card">
                     <div class="card-header">
                       <span class="subject">특강</span>
