--- a/pages/teacher.html
+++ b/pages/teacher.html
@@ -15,9 +15,7 @@
           <div><i class="bold">동국대학교 교원</i> 님!</div>
           <div>산학교육<i class="icon-1"></i>프로그램은 교육부에서</div>
           <div class="stroke bold">
-            <i class="stroke"
-              >운영하는<i class="icon-2" style="width: 100px"></i>유일한</i
-            >
+            <i class="stroke">운영하는<i class="icon-2"></i>유일한</i>
             산학협력
           </div>
           <div class="bold">교육사업<i class="icon-3"></i>입니다.</div>
