--- a/pages/teacher.html
+++ b/pages/teacher.html
@@ -47,7 +47,7 @@
             <div class="application-content-wrap">
               <div class="application-content"></div>
               <div class="application-content">
-                <img src="src/images/pic_center.png" alt="" />
+                <img src="../srcimages/pic_center.png" alt="" />
                 <p>자세한 내용을 알고 싶다면?</p>
                 <a class="btn-link" href=""
                   >클릭해보세요!<i class="bi bi-box-arrow-up-right"></i
@@ -80,7 +80,7 @@
                       </span>
                     </div>
                     <div class="img-box">
-                      <img src="src/images/story_thumb_1.jpg" alt="" />
+                      <img src="../srcimages/story_thumb_1.jpg" alt="" />
                     </div>
                     <div class="text-box">
                       <b>산업체 현장체험 - Microsoft</b>
@@ -99,7 +99,7 @@
                       </span>
                     </div>
                     <div class="img-box">
-                      <img src="src/images/story_thumb_2.jpg" alt="" />
+                      <img src="../srcimages/story_thumb_2.jpg" alt="" />
                     </div>
                     <div class="text-box">
                       <b>2023산학협력페스티벌</b>
@@ -111,10 +111,10 @@
               </div>
               <div class="swiper-navigation">
                 <button class="swiper-button-prev">
-                  <img src="src/images/icon_slider_prev.png" alt="" />
+                  <img src="../srcimages/icon_slider_prev.png" alt="" />
                 </button>
                 <button class="swiper-button-next">
-                  <img src="src/images/icon_slider_next.png" alt="" />
+                  <img src="../srcimages/icon_slider_next.png" alt="" />
                 </button>
               </div>
               <div class="swiper-pagination">
