--- a/pages/industry.html
+++ b/pages/industry.html
@@ -46,7 +46,7 @@
             <div class="application-content-wrap">
               <div class="application-content"></div>
               <div class="application-content">
-                <img src="../srcimages/pic_center.png" alt="" />
+                <img src="../src/images/pic_center.png" alt="" />
                 <p>자세한 내용을 알고 싶다면?</p>
                 <a class="btn-link" href=""
                   >클릭해보세요!<i class="bi bi-box-arrow-up-right"></i
@@ -79,7 +79,7 @@
                       </span>
                     </div>
                     <div class="img-box">
-                      <img src="../srcimages/story_thumb_1.jpg" alt="" />
+                      <img src="../src/images/story_thumb_1.jpg" alt="" />
                     </div>
                     <div class="text-box">
                       <b>이음클래스 KBS공채성우특강</b>
@@ -98,7 +98,7 @@
                       </span>
                     </div>
                     <div class="img-box">
-                      <img src="../srcimages/story_thumb_2.jpg" alt="" />
+                      <img src="../src/images/story_thumb_2.jpg" alt="" />
                     </div>
                     <div class="text-box">
                       <b>2023 산학협력 EXPO</b>
@@ -110,10 +110,10 @@
               </div>
               <div class="swiper-navigation">
                 <button class="swiper-button-prev">
-                  <img src="../srcimages/icon_slider_prev.png" alt="" />
+                  <img src="../src/images/icon_slider_prev.png" alt="" />
                 </button>
                 <button class="swiper-button-next">
-                  <img src="../srcimages/icon_slider_next.png" alt="" />
+                  <img src="../src/images/icon_slider_next.png" alt="" />
                 </button>
               </div>
               <div class="swiper-pagination">
