--- a/pages/qna.html
+++ b/pages/qna.html
@@ -36,7 +36,7 @@
               <li>
                 <a href=""
                   ><div class="img-box">
-                    <img src="../srcimages/qna_thumb_1.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_1.jpg" alt="" />
                   </div>
                   <p>
                     캡스톤디자인 지원금 깜빡하고 개인카드로 결제했어요! 이럴땐
@@ -50,7 +50,7 @@
               <li>
                 <a href="">
                   <div class="img-box">
-                    <img src="../srcimages/qna_thumb_2.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_2.jpg" alt="" />
                   </div>
                   <p>
                     캡스톤 디자인 지원금 안 썼는데 최종보고서 제출해야 하나요?
@@ -63,7 +63,7 @@
               <li>
                 <a href=""
                   ><div class="img-box">
-                    <img src="../srcimages/qna_thumb_3.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_3.jpg" alt="" />
                   </div>
                   <p>이음클래스에 대해 자세히 알아보아요!</p>
                   <span class="tag"
@@ -74,7 +74,7 @@
               <li>
                 <a href="">
                   <div class="img-box">
-                    <img src="../srcimages/qna_thumb_4.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_4.jpg" alt="" />
                   </div>
                   <p>N행복사업이란 무엇을 말하며, 어떤 점이 좋은 걸까요?</p>
                   <span class="tag"><i>링크사업단</i><i>N행복산업</i></span></a
@@ -83,7 +83,7 @@
               <li>
                 <a href=""
                   ><div class="img-box">
-                    <img src="../srcimages/qna_thumb_5.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_5.jpg" alt="" />
                   </div>
                   <p>캡스톤 디자인 밸류업 신청 어렵지 않아요!</p>
                   <span class="tag"
@@ -94,7 +94,7 @@
               <li>
                 <a href=""
                   ><div class="img-box">
-                    <img src="../srcimages/qna_thumb_6.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_6.jpg" alt="" />
                   </div>
                   <p>드림패스, 캡스톤디자인 신청하기!</p>
                   <span class="tag"
@@ -106,7 +106,7 @@
               <li>
                 <a href=""
                   ><div class="img-box">
-                    <img src="../srcimages/qna_thumb_7.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_7.jpg" alt="" />
                   </div>
                   <p>산학협력 체험은 이렇게 신청하세요!</p>
                   <span class="tag"
@@ -117,7 +117,7 @@
               <li>
                 <a href=""
                   ><div class="img-box">
-                    <img src="../srcimages/qna_thumb_8.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_8.jpg" alt="" />
                   </div>
                   <p>ALL-SET 기술지도란 무엇일까요? 자세히 알아보아요!</p>
                   <span class="tag"
@@ -128,7 +128,7 @@
               <li>
                 <a href="">
                   <div class="img-box">
-                    <img src="../srcimages/qna_thumb_9.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_9.jpg" alt="" />
                   </div>
                   <p>LINC3.0 사업단에 오시는 길을 알려드립니다!</p>
                   <span class="tag"
@@ -139,7 +139,7 @@
               <li>
                 <a href="">
                   <div class="img-box">
-                    <img src="../srcimages/qna_thumb_10.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_10.jpg" alt="" />
                   </div>
                   <p>LINC3.0사업단의 가족들을 소개합니다!</p>
                   <span class="tag"
@@ -150,7 +150,7 @@
               <li>
                 <a href="">
                   <div class="img-box">
-                    <img src="../srcimages/qna_thumb_11.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_11.jpg" alt="" />
                   </div>
                   <p>ICC 기반 E.R.S.E? RCC기반 지역사회혁신?</p>
                   <span class="tag"
@@ -161,7 +161,7 @@
               <li>
                 <a href="">
                   <div class="img-box">
-                    <img src="../srcimages/qna_thumb_12.jpg" alt="" />
+                    <img src="../src/images/qna_thumb_12.jpg" alt="" />
                   </div>
                   <p>2024년 사업일정을 안내드립니다.</p>
                   <span class="tag"
