--- a/pages/index.html
+++ b/pages/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="src/images/favicon.ico" />
+    <link rel="icon" href="../src/images/favicon.ico" />
     <title>동국대학교 산학교육센터</title>
-  <script defer src="main.js"></script></head>
+  <script defer src="../main.js"></script></head>
   <body>
     <div class="container">
       <div class="header-include"></div>
@@ -39,9 +39,9 @@
               ><i class="rotate-v2"></i>
             </div>
             <div class="greeting-center">
-              <img class="img-01" src="src/images/deco_linc01.png" alt="" />
-              <img class="img-02" src="src/images/deco_linc02.png" alt="" />
-              <img class="img-03" src="src/images/deco_linc03.png" alt="" />
+              <img class="img-01" src="../src/images/deco_linc01.png" alt="" />
+              <img class="img-02" src="../src/images/deco_linc02.png" alt="" />
+              <img class="img-03" src="../src/images/deco_linc03.png" alt="" />
             </div>
           </div>
         </section>
@@ -102,36 +102,36 @@
                 <div class="letter-content">
                   <div class="letter-bubble">
                     <div class="img-wrap">
-                      <img src="src/images/pic_letter_speech02.png" alt="" />
+                      <img src="../src/images/pic_letter_speech02.png" alt="" />
                       <span>어떤 내용이<br />적혀 있을까요?</span>
                     </div>
                     <div class="img-wrap">
-                      <img src="src/images/pic_letter_speech01.png" alt="" />
+                      <img src="../src/images/pic_letter_speech01.png" alt="" />
                       <span class="bubble-text">편지가<br />도착했어요! </span>
                     </div>
                   </div>
                   <div class="letter">
                     <div class="letter-envelope">
                       <img
-                        src="src/images/pic_letter_inner01.png"
+                        src="../src/images/pic_letter_inner01.png"
                         alt=""
                         class="letter-envelope-in-img"
                       />
                       <img
                         class="letter-envelope-outer-img"
-                        src="src/images/pic_letter01.png"
+                        src="../src/images/pic_letter01.png"
                         alt=""
                       />
                       <img
                         class="letter-envelope-close-img"
-                        src="src/images/pic_letter_close01.png"
+                        src="../src/images/pic_letter_close01.png"
                         alt=""
                       />
                     </div>
                     <div class="letter-paper">
                       <img
                         class="letter-paper-bg"
-                        src="src/images/bg_paper01.jpg"
+                        src="../src/images/bg_paper01.jpg"
                         alt=""
                       />
                       <div class="letter-paper-text">
@@ -159,36 +159,36 @@
                 <div class="letter-content">
                   <div class="letter-bubble">
                     <div class="img-wrap">
-                      <img src="src/images/pic_letter_speech04.png" alt="" />
+                      <img src="../src/images/pic_letter_speech04.png" alt="" />
                       <span>어떤 내용이<br />적혀 있을까요?</span>
                     </div>
                     <div class="img-wrap">
-                      <img src="src/images/pic_letter_speech03.png" alt="" />
+                      <img src="../src/images/pic_letter_speech03.png" alt="" />
                       <span class="bubble-text">편지가<br />도착했어요! </span>
                     </div>
                   </div>
                   <div class="letter">
                     <div class="letter-envelope">
                       <img
-                        src="src/images/pic_letter_inner02.png"
+                        src="../src/images/pic_letter_inner02.png"
                         alt=""
                         class="letter-envelope-in-img"
                       />
                       <img
                         class="letter-envelope-outer-img"
-                        src="src/images/pic_letter02.png"
+                        src="../src/images/pic_letter02.png"
                         alt=""
                       />
                       <img
                         class="letter-envelope-close-img"
-                        src="src/images/pic_letter_close02.png"
+                        src="../src/images/pic_letter_close02.png"
                         alt=""
                       />
                     </div>
                     <div class="letter-paper">
                       <img
                         class="letter-paper-bg"
-                        src="src/images/bg_paper02.jpg"
+                        src="../src/images/bg_paper02.jpg"
                         alt=""
                       />
                       <div class="letter-paper-text">
@@ -216,11 +216,11 @@
                 <div class="letter-content">
                   <div class="letter-bubble">
                     <div class="img-wrap">
-                      <img src="src/images/pic_letter_speech06.png" alt="" />
+                      <img src="../src/images/pic_letter_speech06.png" alt="" />
                       <span>어떤 내용이<br />적혀 있을까요?</span>
                     </div>
                     <div class="img-wrap">
-                      <img src="src/images/pic_letter_speech05.png" alt="" />
+                      <img src="../src/images/pic_letter_speech05.png" alt="" />
                       <span class="bubble-text">편지가<br />도착했어요! </span>
                     </div>
                   </div>
@@ -228,24 +228,24 @@
                     <div class="letter-envelope">
                       <img
                         class="letter-envelope-in-img"
-                        src="src/images/pic_letter_inner03.png"
+                        src="../src/images/pic_letter_inner03.png"
                         alt=""
                       />
                       <img
                         class="letter-envelope-outer-img"
-                        src="src/images/pic_letter03.png"
+                        src="../src/images/pic_letter03.png"
                         alt=""
                       />
                       <img
                         class="letter-envelope-close-img"
-                        src="src/images/pic_letter_close03.png"
+                        src="../src/images/pic_letter_close03.png"
                         alt=""
                       />
                     </div>
                     <div class="letter-paper">
                       <img
                         class="letter-paper-bg"
-                        src="src/images/bg_paper03.jpg"
+                        src="../src/images/bg_paper03.jpg"
                         alt=""
                       />
                       <div class="letter-paper-text">
