--- a/pages/teacher.html
+++ b/pages/teacher.html
@@ -45,7 +45,18 @@
           <div class="application-inner">
             <div class="heading">신청방법</div>
             <div class="application-content-wrap">
-              <div class="application-content"></div>
+              <div class="application-content">
+                <iframe
+                  width="100%"
+                  height="100%"
+                  src="https://www.youtube.com/embed/c-Po9-tb23o?si=RPoc3VjBE1lbphAm?autoplay=1&mute=1&controls=0"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
               <div class="application-content">
                 <img src="../src/images/pic_center.png" alt="" />
                 <p>자세한 내용을 알고 싶다면?</p>
