--- a/pages/index.html
+++ b/pages/index.html
@@ -282,7 +282,7 @@
             <div class="introduction-phrase">
               동국대학교<span><i class="icon-link"></i>링크사업단</span>
             </div>
-            <a href="/pages/introduction.html"
+            <a href="introduction.html"
               >소개 바로가기 <i class="bi bi-arrow-right"></i
             ></a>
           </div>
