--- a/pages/qna.html
+++ b/pages/qna.html
@@ -26,7 +26,7 @@
               </div>
               <div class="input-wrap">
                 <input
-                  type="search"
+                  type="text"
                   placeholder="키워드(해시태그)로 검색해보세요."
                 />
                 <button><i class="bi bi-search"></i></button>
@@ -176,6 +176,5 @@
       </main>
       <div class="footer-include"></div>
     </div>
-
   </body>
 </html>
