--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../src/images/favicon.ico" />
     <title>동국대학교 산학교육센터</title>
-  <script defer src="../main.js"></script></head>
+  <script defer src="../main.js"></script><link href="../main.css" rel="stylesheet"></head>
   <body>
     <div class="container">
       <div class="header-include"></div>
