--- a/pages/industry.html
+++ b/pages/industry.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  <script defer src="../detail.js"></script></head>
+  <script defer src="../detail.js"></script><link href="../detail.css" rel="stylesheet"></head>
   <body>
     <div class="container">
       <div class="header-include"></div>
