--- a/pages/introduction.html
+++ b/pages/introduction.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-anim-scale=1.0"
     />
     <title>Document</title>
-  <script defer src="../introduction.js"></script></head>
+  <script defer src="../introduction.js"></script><link href="../introduction.css" rel="stylesheet"></head>
   <body>
     <div class="container">
       <div class="header-include"></div>
